[gd_scene load_steps=5 format=3 uid="uid://bikbb4a6vf501"]

[ext_resource type="Script" uid="uid://cnyptix6bhshj" path="res://KreasiBatik.gd" id="1_2dp2p"]
[ext_resource type="Texture2D" uid="uid://b1c3rlsa8b7f7" path="res://Aset New/lukis batik/batik 0.png" id="2_hapb5"]
[ext_resource type="Texture2D" uid="uid://c2pnve3slcadb" path="res://Aset New/lukis batik/batik 50.png" id="3_ylj6g"]
[ext_resource type="Texture2D" uid="uid://b30nrdwdqkuia" path="res://Aset New/lukis batik/batik 100.png" id="4_v0i07"]

[node name="LukisBatik_Kawung" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 714.0
offset_bottom = 637.0
script = ExtResource("1_2dp2p")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(363.75, 641)
scale = Vector2(1.00625, 1.0015625)
texture = ExtResource("2_hapb5")

[node name="Panel_Pola_Kuas1" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 1024.0
offset_right = 164.0
offset_bottom = 1089.0

[node name="Btn_Kuas_1" type="TextureButton" parent="Panel_Pola_Kuas1"]
layout_mode = 2

[node name="Panel_Pola_Kuas2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 1024.0
offset_right = 164.0
offset_bottom = 1089.0

[node name="Btn_Kuas_2" type="TextureButton" parent="Panel_Pola_Kuas2"]
layout_mode = 2

[node name="card_kuas" type="Sprite2D" parent="Panel_Pola_Kuas2"]
position = Vector2(264.00006, -383)
scale = Vector2(1.0055555, 1.0015626)
texture = ExtResource("3_ylj6g")

[node name="Panel_Pola_Kuas3" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 189.0
offset_top = 1141.0
offset_right = 536.0
offset_bottom = 1221.0

[node name="Btn_Klaim_Reward" type="TextureButton" parent="Panel_Pola_Kuas3"]
layout_mode = 2

[node name="card_kuas2" type="Sprite2D" parent="Panel_Pola_Kuas3"]
position = Vector2(175.00006, -500)
scale = Vector2(1.0055555, 1.0015626)
texture = ExtResource("4_v0i07")

[connection signal="pressed" from="Panel_Pola_Kuas1/Btn_Kuas_1" to="." method="_on_btn_kuas_1_pressed"]
[connection signal="pressed" from="Panel_Pola_Kuas2/Btn_Kuas_2" to="." method="_on_btn_kuas_2_pressed"]
[connection signal="pressed" from="Panel_Pola_Kuas3/Btn_Klaim_Reward" to="." method="_on_btn_klaim_reward_pressed"]
